crates/cribo/tests/snapshots/requirements@bundle_third_party_relative_import_shadowed_portion.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_relative_import_shadowed_portion/main.py
---
packages: []
count: 0
