crates/cribo/tests/snapshots/requirements@bundle_third_party_relative_importlib_pruning.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_relative_importlib_pruning/main.py
---
packages:
  - dropped-pkg
count: 1
