crates/cribo/tests/snapshots/requirements@bundle_third_party_requires_dist_propagation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_requires_dist_propagation/main.py
---
packages:
  - lazy-extra<2
count: 1
