crates/cribo/tests/snapshots/requirements@bundle_third_party_sys_modules_self.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_sys_modules_self/main.py
---
packages: []
count: 0
