crates/cribo/tests/snapshots/requirements@class_pattern_codegen.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/class_pattern_codegen/main.py
---
packages: []
count: 0
