crates/cribo/tests/snapshots/requirements@conditional_assignment_reentrant_visibility.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_assignment_reentrant_visibility/main.py
---
packages: []
count: 0
